# lldb-dfsan

./: README.md  lldb_dfsan.py  pyproject.toml
.github/workflows/: tests.yml
scripts/: publish.sh
tests/: test.py
tests/aggregates/superclass/: main.cpp
tests/class/: check.py  main.cpp
tests/expr/local-var-int/: check.py
tests/expr/nullptr-expr/: check.py
tests/indentation/array-element/: check.py  main.c
tests/indentation/default/: check.py
tests/local-array-partial-tainted/: check.py
tests/local-array-start-tainted/: check.py
tests/local-array-untainted/: check.py
tests/local-var/: check.py
tests/local-var-int/: check.py  main.c
tests/local-var-struct/: check.py
tests/local/local-array-partial-tainted/: check.py
tests/local/local-array-start-tainted/: check.py  main.c
tests/local/local-array-untainted/: check.py
tests/local/with-typedef/: check.py  main.c
tests/only-taint-printing/local-array-partial-tainted/: check.py
tests/only-taint-printing/local-array-start-tainted/: check.py
tests/only-taint-printing/local-array-untainted/: check.py  main.c
tests/pointer-following/pointer-to-local-var/: check.py
tests/pointer-following/ptr-to-self/: check.py  main.c
tests/pointer-following/ptr-to-struct/: check.py  main.c
tests/pointer-following/struct/: check.py  main.c
tests/struct/: check.py  main.c
tests/superclass/: check.py
tests/taint-diff/new-tainted-array-element/: check.py  main.c
tests/test-utils/: dfsan_test.py
tests/unknown_var/: check.py  main.c
tests/untainted-local-var-int/: check.py  main.c
(+3 files in other folders)
